# grapl

./: .gitignore  README.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
.github/workflows/: compilation.yml  gradle_test.yml  main.yml  maven_publish.yml  testing.yml
gradle/: libs.versions.toml
gradle-addons/: native-compilation.gradle
gradle/addons/: maven-publish.gradle  maven-publisher.gradle  native-compilation.gradle  property-class.gradle
modules/core/: build.gradle  build.gradle.kts
modules/core/kotlin/: module-info.java
modules/core/kotlin/com/huskerdev/grapl/: GraplInfo.kt  GraplNatives.kt  GraplProperties.kt  PlatformUtils.kt
modules/core/kotlin/com/huskerdev/grapl/core/: Cursor.kt  Dimension.kt  GraplInfo.kt  GraplNatives.kt  Position.kt  Size.kt  Theme.kt
modules/core/kotlin/com/huskerdev/grapl/core/display/: Display.kt  DisplayMode.kt  DisplayPeer.kt
modules/core/kotlin/com/huskerdev/grapl/core/exceptions/: DisplayModeChangingException.kt
modules/core/kotlin/com/huskerdev/grapl/core/input/: Cursor.kt  Input.kt  Key.kt  Pointer.kt
modules/core/kotlin/com/huskerdev/grapl/core/platform/: Architecture.kt  BackgroundMessageHandler.kt  OS.kt  Platform.kt
modules/core/kotlin/com/huskerdev/offgraph/: PlatformUtils.kt
modules/core/native/: build.gradle  build.gradle.kts
modules/core/native/linux/wayland/: platform.cpp
modules/core/native/linux/x11/: platform.cpp  window.cpp
modules/core/native/macos/: grapl-macos.h  platform.mm
modules/core/native/macos/utils/: thread-utils.mm
modules/core/native/shared/: callbacks.hpp
modules/core/native/shared/all/: callbacks.hpp  grapl.h
modules/core/native/shared/macos/: thread-utils.h  thread-utils.mm
modules/core/native/src/: shared.h
modules/core/native/src/linux/: grapl-linux.h  platform.cpp
modules/core/native/src/linux/wayland/: grapl-wayland.h
modules/core/native/src/linux/x11/: display.cpp  grapl-x11.h  platform.cpp  window.cpp
modules/core/native/src/macos/: display.mm  grapl-macos.h  platform.mm  utils.mm  window.mm
modules/core/native/src/macos/utils/: thread-utils.h
modules/core/native/src/win/: display.cpp  grapl-win.h  platform.cpp  touchpad-manager.cpp  win-shared.h  window.cpp
modules/core/native/win/: display.cpp  platform.cpp  window.cpp
modules/d3d9/: build.gradle  build.gradle.kts
modules/d3d9/kotlin/com/huskerdev/grapl/d3d9/: D3D9Device.kt
modules/d3d9/kotlin/com/huskerdev/offgraph/d3d9/: D3D9Device.kt
modules/d3d9/native/: build.gradle  build.gradle.kts
modules/d3d9/native/src/: shared.h
modules/ext-display/: build.gradle  build.gradle.kts
modules/ext-display/kotlin/: module-info.java
modules/gl/: build.gradle  build.gradle.kts
modules/gl/kotlin/: module-info.java
modules/gl/kotlin/com/huskerdev/grapl/gl/: GLContext.kt  GLDebug.kt  GLManager.kt  GLPixelFormat.kt  GLPlatform.kt  GLProfile.java  GLWindow.kt  GLWindowPeer.kt
modules/gl/native/: build.gradle  build.gradle.kts
modules/gl/native/linux/: context.cpp  gl-linux.h  grapl-gl-linux.h  platform.cpp
modules/gl/native/linux/egl/: context.cpp  gl-linux-egl-context.cpp  gl-linux-egl-manager.cpp  gl-linux-egl.h  grapl-gl-linux-egl.h  manager.cpp
modules/gl/native/linux/glx/: context.cpp  gl-linux-glx-context.cpp  gl-linux-glx-manager.cpp  gl-linux-glx.h  grapl-gl-linux-glx.h  manager.cpp
modules/gl/native/macos/: context.mm  gl-macos-context.mm  gl-macos-manager.mm  gl-macos-nscontext.mm  gl-macos.h  grapl-gl-macos.h  nscontext.mm  platform.mm
modules/gl/native/macos/utils/: thread-utils.h  thread-utils.mm
modules/gl/native/shared/: gl-shared-context.cpp  gl-shared.h  grapl-gl.h
modules/gl/native/src/: grapl-gl.h  linux.cpp  macos.cpp  shared.h  windows.cpp
modules/gl/native/src/linux/: context.cpp  grapl-gl-linux.h  linux.cpp  platform.cpp
modules/gl/native/src/macos/: context.mm  grapl-gl-macos.h  macos-shared.h  macos.cpp  nscontext.mm  platform.mm
modules/gl/native/src/win/: context.cpp  grapl-gl-win.h  platform.cpp  win-shared.h
modules/gl/native/win/: context.cpp  gl-win-context.cpp  gl-win-manager.cpp  gl-win.h  grapl-gl-win.h  platform.cpp
modules/gl/test/: GraplTest.kt  OJGLTest.kt
native/: CMakeLists.txt  build.gradle  linux.cpp  macos.cpp  shared.cpp  windows.cpp
native/src/: shared.h
native/src/d3d9/: d3d9.cpp
native/src/gl/: linux.cpp  macos.cpp  shared-gl.h  windows.cpp
src/main/kotlin/com/huskerdev/ojgl/: GLContext.kt  GLMin.kt  GLPlatform.kt
src/main/kotlin/com/huskerdev/ojgl/d3d9/: D3D9Device.kt
src/main/kotlin/com/huskerdev/ojgl/gl/: GLContext.kt  GLPlatform.kt
src/main/kotlin/com/huskerdev/ojgl/utils/: PlatformUtils.kt
src/main/resources/com/huskerdev/ojgl/natives/: offscreen-jgl.dylib  ojgl.dylib
src/test/kotlin/com/husker/ojgl/: OJGLTest.kt
(+27 files in other folders)
